infrastructure/kubernetes_yamls/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    kubernetes.io/ingress.allow-http: "false"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "ssl"  #enforce http -> https redirection
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true" #we want to keep session, when user changes to different pod
spec:
  rules:
  - http:
      paths:
      - path: "/core/*"
        backend:
          service:
            name: core-backend-service
            port:
              number: 80
        pathType: Prefix
      
      - path: "/id/*"
        backend:
          service:
            name: identity-backend-service
            port:
              number: 80
        pathType: Prefix
        
      - path: "/id"
        backend:
          service:
            name: identity-backend-service
            port:
              number: 80
        pathType: Prefix

      - path: "/"
        backend:
          service:
            name: identity-backend-service
            port:
              number: 80
        pathType: Exact
